# kinect_gazebo

./: CMakeLists.txt  package.xml
launch/: kinect_world.launch
meshes/: chess_9x11_50x50.dae  chess_9x11_50x50_new.dae
urdf/: calib_pattern_9x11_50x50.xacro  kinect.gazebo  kinect.xacro
worlds/: can.world  can_hammer.world
