<package>
  <name>kinect_gazebo</name>
  <version>0.1.0</version>
  <description>kinect_gazebo</description>
  <maintainer email="albert.palo@gmail.com">Albert Palomer</maintainer>

  <license>BSD</license>

  <author email="albert.palo@gmail.com">Albert Palomer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
